# Automated_Planning_project

./: .gitignore  README.md  TODO.md  assumptions.md  domain1.pddl  domain2.pddl  domain3.hddl  domain4.pddl  output.sas  problem1.pddl  problem2.pddl  problem3.hddl  problem4.pddl  sas_plan  sas_plan.2  sas_plan.3  sas_plan.4
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/plansys2_problem5/share/plansys2_problem5/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/plansys2_problem5/share/plansys2_problem5/cmake/: plansys2_problem5Config.cmake
install/plansys2_problem5/share/plansys2_problem5/launch/: plansys2_problem5_launch.py
install/plansys2_problem5/share/plansys2_problem5/pddl/: domain4.pddl
log/: latest_build
plansys2_problem5/: CMakeLists.txt  package.xml
plansys2_problem5/launch/: commands  commands_smaller  commands_smallest  commands_smallest_orginal  example_1  example_2  no_robot  no_robot_person  plansys2_problem5_launch.py
plansys2_problem5/pddl/: domain4.pddl
plansys2_problem5/src/: load_box_action_node.cpp  move_robot_action_node.cpp  pick_item_from_box_action.cpp  pick_item_from_box_action_node.cpp  pick_up_item_from_location_action_node.cpp  pickdown_food_action_node.cpp  pickdown_medicine_action_node  pickdown_medicine_action_node.cpp  pickdown_tool_action_node.cpp  put_item_in_box_action_node.cpp  unload_box_action_node.cpp
problem1/: domain1.pddl  output.sas  problem1.pddl  problem1_instance1.pddl  problem1_instance1.pddl.plan  problem1_instance1_results.md  problem1_instance2.pddl  problem1_instance2.pddl.plan  problem1_instance2_results.md  problem1_instance3.pddl  sas_plan
problem2/: domain2.pddl  problem2.pddl  problem2_instance1.pddl  problem2_instance1_results.md  problem2_instance2.pddl  problem2_instance2_ORIGINAL.pddl  problem2_instance2_results.md
problem3/: domain3.hddl  example_1.hddl  example_1.txt  example_1_unor.hddl  example_1_unor.txt  example_2.hddl  example_2.txt  example_2_unor.hddl  example_2_unor.txt  problem3.hddl
problem4/: domain4.pddl  example_1.pddl  example_1_p1.txt  example_1_p2.txt  example_1_p3.txt  example_2.pddl  example_2_p1.txt  example_2_p2.txt  example_2_p3.txt
